tests/e2e/semantics/assignment_array_index_invalid2.error
Error: syntax error in story at line 2, column 1

2|    a[0] = 2
      ^^^^^^

E0100: Can't assign `int` to `List[int]`
